tests/ui/macros/macro-comma-behavior.std.stderr
error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:20:23
   |
LL |     assert_eq!(1, 1, "{}",);
   |                       ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:23:23
   |
LL |     assert_ne!(1, 2, "{}",);
   |                       ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:29:29
   |
LL |     debug_assert_eq!(1, 1, "{}",);
   |                             ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:32:29
   |
LL |     debug_assert_ne!(1, 2, "{}",);
   |                             ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:37:18
   |
LL |         eprint!("{}",);
   |                  ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:42:20
   |
LL |         eprintln!("{}",);
   |                    ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:47:18
   |
LL |         format!("{}",);
   |                  ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:51:19
   |
LL |     format_args!("{}",);
   |                   ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:58:17
   |
LL |         print!("{}",);
   |                 ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:63:19
   |
LL |         println!("{}",);
   |                   ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:67:21
   |
LL |     unimplemented!("{}",);
   |                     ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:76:24
   |
LL |             write!(f, "{}",)?;
   |                        ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:80:26
   |
LL |             writeln!(f, "{}",)?;
   |                          ^^

error: aborting due to 13 previous errors

